[package]
name = "termoil"
version = "0.1.0"
edition = "2021"
[lib]
name = "termoil"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }
